templates/zotero_template.yaml
---
# Source: zotero/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zotero-release-name
  labels:
    app: zotero
    chart: zotero-0.2.8
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: zotero
      release: release-name
  policyTypes:
    - Ingress
  ingress:
    - ports:
      - port: 1969
        protocol: TCP
      - port: 9102
        protocol: TCP
---
# Source: zotero/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zotero-release-name
  labels:
    app: zotero
    chart: zotero-0.2.8
    release: release-name
    heritage: Helm
spec:
  type: NodePort
  selector:
    app: zotero
    release: release-name
    routed_via: release-name
  ports:
  - name: http
    protocol: TCP
    port: 1969
---
# Source: zotero/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zotero-release-name
  labels:
    app: zotero
    chart: zotero-0.2.8
    release: release-name
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: zotero
      release: release-name
  replicas: 1
  template:
    metadata:
      labels:
        app: zotero
        release: release-name
        routed_via: release-name
    spec:
      containers:
        # The main application container
        - name: zotero-release-name
          image: "docker-registry.wikimedia.org/wikimedia/mediawiki-services-zotero:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1969
          livenessProbe:
            tcpSocket:
              port: 1969
          readinessProbe:
            httpGet:
              path: /?spec
              port: 1969
          resources:
            requests:
              cpu: 1m
              memory: 100Mi
            limits:
              cpu: 1
              memory: 400Mi
---
# Source: zotero/templates/tests/test-service-checker.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 'zotero-release-name-service-checker'
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
spec:
  containers:
  - name: 'zotero-release-name-service-checker'
    image: "docker-registry.wikimedia.org/service-checker"
    imagePullPolicy: IfNotPresent
    args: ["-t", "5", '$(ZOTERO_RELEASE_NAME_SERVICE_HOST)', 'http://zotero-release-name:1969']
  dnsPolicy: ClusterFirst
  restartPolicy: Never
